# target-s3

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  temp.yml
target_s3/: __init__.py  __main__.py  sinks.py  target.py
tests/: file.jsonl  test_core.py
