[tool.poetry]
name = "target-s3"
version = "0.0.1"
description = "`target-s3` is a Singer target for target-s3, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Bohdan <humble.beck@gmail.com>"]
keywords = [
    "ELT",
    "target-s3",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.38.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.0"
boto3 = "^1.34.131"
smart-open = {extras = ["s3"], version = "^7.0.4"}

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.38.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
src = ["target_s3"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_s3"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3 = 'target_s3.target:TargetS3.cli'
